aws-migration/le-migration/07-jenkins/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    app: jenkins
    project: linkedeye
    environment: prod
